# TrackBridge

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  auth.py  dashboard.py  health.py  reports.py  tracking.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: reports.py  tracking.py  user.py
backend/app/schemas/: analytics.py  auth.py  reports.py  tracking.py
backend/app/services/: reports.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_reports.py  test_tracking.py
caddy/: Caddyfile
extension/: README.md  manifest.json
extension/src/: background.js  content.js  popup.css  popup.html  popup.js
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MetricCard.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: app.css
